Fix realartists/shiphub-cocoa#99 Weird horizontal overflow on code blocks in markdown

--- a/IssueWeb/app/index.css
+++ b/IssueWeb/app/index.css
@@ -153,6 +153,7 @@ pre {
   font-size: 10pt;
   font-family: menlo, consolas, monaco, sans-serif;
   line-height: 130%;
+  overflow-x: auto;
 }
 pre > code {
   padding: 0;
